# inference_optimizations

./: .gitattributes  .gitignore  Makefile  README.md  benchmark.py  pyproject.toml
baseline/: app.py
batch/: app.py
onnx/: app.py  convert_model.py
onnx_models/: model.onnx
