[project]
name = "inference-optimizations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.104.0",
    "onnxruntime>=1.24.3",
    "onnxscript>=0.6.2",
    "psutil>=5.9.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "uvicorn>=0.24.0",
]
